--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,12 @@ Jaune : #ffc107
   color: white;
 }
 
-#entrer div {
+/* #entrer div {
+  display: flex;
+  justify-content: center;
+} */
+
+#entrer #title {
   display: flex;
   justify-content: center;
 }
@@ -119,9 +124,9 @@ Jaune : #ffc107
   color: #c2a304;
 }
 
-#entrer div * {
+/* #entrer div * {
   width: 950px;
-}
+} */
 /* STYLES DES SECTIONS  */
 
 .dark {
